--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -5,7 +5,8 @@ body {
   font-family: 'Roboto Slab', serif;
   font-weight: 300;
   color: #111;
-  background: url('images/background.png') #edeff0;
+  background: url('../../img/svgs/background.svg') #edeff0;
+  background-size: 55px;
 }
 
 #container {
@@ -25,49 +26,59 @@ a {
   text-decoration: none;
   color: #39add1;
   font-weight: 700;
-  }
-  a:hover {
-    color: #111;
-  }
+}
+
+a:hover {
+  color: #111;
+}
 
 header {
   padding-top: 10px;
 }
-  header nav {
-    padding-bottom: 50px;
-    text-align: left;
-  }
-  header nav ul li {
-    display: inline-block;
-    margin-right: 20px;
-  }
-  header h1 {
-    line-height: 1em;
-  }
+
+header nav {
+  padding-bottom: 50px;
+  text-align: left;
+}
+
+header nav ul li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+header h1 {
+  line-height: 1em;
+}
 
 main {
   padding-top: 50px;
 }
-  main h2 {
+
+main h2 {
   font-size: 28px;
 }
-  main ul {
-    padding: 0;
-  }
-    main li {
-      display: inline-block;
-      color: #ba8058;
-      margin-right: 20px;
-    }
-      main li img {
-        margin-bottom: 15px;
-      }
-      main li span {
-        margin-left: -40px;
-      }
-      main li:last-child {
-        margin-right: 0;
-      }
+
+main ul {
+  padding: 0;
+}
+
+main li {
+  display: inline-block;
+  color: #ba8058;
+  margin-right: 20px;
+}
+
+main li img {
+  margin-bottom: 15px;
+}
+
+main li span {
+  margin-left: -40px;
+}
+
+main li:last-child {
+  margin-right: 0;
+}
 
 footer {
   width: 100%;
