--- a/src/css/app.css
+++ b/src/css/app.css
@@ -376,7 +376,7 @@ body {
   font-family: 'Roboto Slab', serif;
   font-weight: 300;
   color: #111;
-  background: url("../../img/svgs/background.svg") #edeff0;
+  background: url("../img/svgs/background.svg") #edeff0;
   background-size: 55px; }
 
 #container {
