--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -5,7 +5,7 @@ body {
   font-family: 'Roboto Slab', serif;
   font-weight: 300;
   color: #111;
-  background: url('../../img/svgs/background.svg') #edeff0;
+  background: url('../img/svgs/background.svg') #edeff0;
   background-size: 55px;
 }
 
